--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -14,4 +14,4 @@
 android.enableJetifier=true
 #android.enableR8=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xmx4608m
