--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,3 +35,9 @@ android {
 dependencies{
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
+
+configurations.all {
+    resolutionStrategy {
+        force 'androidx.core:core-ktx:1.6.0'
+    }
+}
